<resources>
    <string name="app_name">RegistrodeConsumo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="textitem">Nombre del Item  :</string>
    <string name="textprecio">Precio unidad  :</string>
    <string name="textcant">Cantidad  :</string>
    <string name="textot">Total Actual</string>
    <string name="textboton">Guardar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>